# VideoAiAnalysis

./: .clang-format  .clangd  .editorconfig  .env  .gitignore  .qmlls.ini  CMakeLists.txt  README.md  build_project.ps1  compile_commands.json  configure_cmake.bat  demo.json  gitdiff.txt  reproduce_bug.py  requirements.txt  run_app.ps1  src.bat  temp  test_mode.py  tmpclaude-a9dd-cwd
.artifacts/: ai_markdown_display_implementation.md  cpp_thread_lifecycle_guide.md  llm_voice_flow_analysis.md.resolved  microservice_architecture_analysis.md.resolved  onnx_memory_pool_optimization.md  optimized_architecture_design.md
.claude/: settings.local.json
Models/: .gitignore  README.md
configs/: README.md  analyzer_config.json  gemini_config.json
cpp/: CMakeLists.txt
cpp/bindings/: CMakeLists.txt  README.md  bind_Screen_Recorder.cpp  bind_encoder.cpp  bind_frame_grabber.cpp  bindings.cpp  bindings.h
cpp/bindings/analyzer/: CMakeLists.txt  analyzer_module.cpp  bind_analyzer_api.cpp  bind_analyzer_config.cpp  bind_analyzer_types.cpp
cpp/bindings/recorder/: CMakeLists.txt  bind_recorder_api.cpp  bind_recorder_config.cpp  bind_recorder_types.cpp  recorder_module.cpp
cpp/include/: video_processor.h
cpp/include/Infra/: Log.h
cpp/include/Process/Analyzer/: AnalyzerAPI.h
cpp/include/Process/IPC/: AnalyzerProcessClient.h  CommandProtocol.h  IIPCClientBase.h  IPCServer.h  RecorderProcessClient.h
cpp/include/Process/Recorder/: RecorderAPI.h
cpp/include/core/Config/: ConfigBase.h  ConfigValidation.h  UnifiedConfig.h
cpp/include/core/KeyFrame/: KeyFrameAnalyzerService.h  KeyFrameVideoEncoder.h
cpp/include/core/KeyFrame/Detectors/: MotionDetector.h  MotionVisualizer.h  SceneChangeDetector.h  TextDetector.h
cpp/include/core/KeyFrame/Foundation/: DataConverter.h  ModelManager.h  ONNXSession.h  TensorBuffer.h
cpp/include/core/KeyFrame/FrameAnalyzer/: DynamicCalculator.h  FrameScorer.h  IFrameAnalyzer.h  KeyFrameDetector.h
cpp/include/core/KeyFrame/FrameAnaylzer/: DynamicCalculator.h  FrameAnalyzer.h  FrameResource.h  FrameScorer.h  KeyFrameDetector.h  StandardFrameAnalyzer.h
cpp/include/core/MQInfra/: FramePublisher.h  FrameSubscriber.h  KeyFrameMetaDataPublisher.h  KeyFrameMetaDataSubscriber.h  Protocol.h
cpp/include/core/ScreenRecorder/: RingFrameBuffer.h  ScreenRecorder.h
cpp/include/core/ScreenRecorder/CaptureLayer/: GrabberFactory.h  IScreenGrabber.h
cpp/include/core/ScreenRecorder/CaptureLayer/AudioGrabber/: AudioData.h  AudioGrabber.h  WasapiAudioGrabber.h
cpp/include/core/ScreenRecorder/CaptureLayer/SpecificGrabber/Linux/: PipeWire_Grabber.h  X11_Grabber.h
cpp/include/core/ScreenRecorder/CaptureLayer/SpecificGrabber/Win/: DXGI_Grabber.h  GDI_Grabber.h
cpp/include/core/ScreenRecorder/CaptureLayer/VideoGrabber/: VideoGrabber.h  VideoGrabberFactory.h
cpp/include/core/ScreenRecorder/CaptureLayer/VideoGrabber/Linux/: PipeWire_Grabber.h  X11_Grabber.h
cpp/include/core/ScreenRecorder/CaptureLayer/VideoGrabber/Win/: DXGI_Grabber.h  GDI_Grabber.h
cpp/include/core/ScreenRecorder/ProcessLayer/: AudioEncoder.h  FFmpegWrapper.h  FrameEncoder.h  FrameGrabberThread.h  ThreadSafetyQueue.h
cpp/include/core/ScreenRecorder/ProcessLayer/Test/: benchmarkPushPop.h
cpp/src/: video_processor.cpp
cpp/src/Infra/: Log.cpp
cpp/src/Process/Analyzer/: AnalyzerAPI.cpp  AnaylerProcessMain.cpp
cpp/src/Process/IPC/: AnalyzerProcessClient.cpp  CommandProtocol.cpp  IIPCClientBase.cpp  IPCServer.cpp  RecorderProcessClient.cpp
cpp/src/Process/Recorder/: RecorderAPI.cpp  RecorderProcessMain.cpp
cpp/src/core/: ScreenRecorder.cpp
cpp/src/core/Config/: ConfigBase.cpp  ConfigValidation.cpp  UnifiedConfig.cpp
cpp/src/core/KeyFrame/: KeyFrameAnalyzerService.cpp  KeyFrameVideoEncoder.cpp
cpp/src/core/KeyFrame/Detectors/: MotionDetector.cpp  MotionVisualizer.cpp  SceneChangeDetector.cpp  TextDetector.cpp
cpp/src/core/KeyFrame/Foundation/: DataConverter.cpp  ModelManager.cpp  ONNXSession.cpp  TensorBuffer.cpp
cpp/src/core/KeyFrame/FrameAnalyzer/: DynamicCalculator.cpp  FrameAnalyzer.cpp  FrameResource.cpp  FrameScorer.cpp  IFrameAnalyzer.cpp  StandardFrameAnalyzer.cpp
cpp/src/core/KeyFrame/FrameAnaylzer/: DynamicCalculator.cpp  FrameAnalyzer.cpp  FrameResource.cpp  FrameScorer.cpp  IFrameAnalyzer.cpp  KeyFrameDetector.cpp  StandardFrameAnalyzer.cpp
cpp/src/core/MQInfra/: FramePublisher.cpp  FrameSubscriber.cpp  KeyFrameMetaDataPublisher.cpp  KeyFrameMetaDataSubscriber.cpp  Protocol.cpp
cpp/src/core/ScreenRecorder/: RingFrameBuffer.cpp  ScreenRecorder.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/: GrabberFactory.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/AudioGrabber/: AudioData.cpp  AudioGrabber.cpp  WasapiAudioGrabber.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/SpecificGrabber/Win/: DXGI_Grabber.cpp  GDI_Grabber.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/VideoGrabber/: VideoGrabber.cpp  VideoGrabberFactory.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/VideoGrabber/Linux/: PipeWire_Grabber.cpp  X11_Grabber.cpp
cpp/src/core/ScreenRecorder/CaptureLayer/VideoGrabber/Win/: DXGI_Grabber.cpp  GDI_Grabber.cpp
cpp/src/core/ScreenRecorder/ProcessLayer/: AudioEncoder.cpp  FFmpegWrapper.cpp  FrameEncoder.cpp  FrameGrabberThread.cpp  ThreadSafetyQueue.cpp
data/: keyframe_analysis.db
docs/: C-2的目录.resolved  Process模块进度分析.md  RecorderMode_Usage_Guide.md  config_optimization_guide.md  google_api_integration_analysis.md.resolved  录制功能实现文档.md  (+8 more)
tests/cpp/: CMakeLists.txt  TestPathUtils.h  test_benchmark.cpp
tests/cpp/UnitTest/KeyFrame/Detactor/: MotionDetectorUT.cpp  SceneChangeUT.cpp  TextDetectorUT.cpp
tests/cpp/UnitTest/KeyFrame/FrameAnaylzer/: FrameAnalyzerImageTest.cpp
tests/cpp/UnitTest/MQInfra/: KeyFrameMp4Generator.cpp  ZMQConnectionUT.cpp  ZMQKEYFRameSelector.cpp
tests/cpp/UnitTest/Process/: ProcessCommunication.cpp  ProcessFunctionUT.cpp
tests/cpp/UnitTest/ScreenRecorder/: KeyFrameEncoder.cpp
tests/cpp/UnitTest/ScreenRecorder/CaptureLayer/: CaptureLayerTest.cpp
tests/cpp/UnitTest/ScreenRecorder/ProcessLayer/: FrameGrabberThreadTest.cpp
(+119 files in other folders)
